--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,16 @@
-FROM node:alpine as builder
-WORKDIR '/app'
-COPY ./package.json ./
+FROM node:14.14.0-alpine as builder
+
+WORKDIR /app
+
+COPY package.json .
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
 
-FROM nginx
+FROM nginx as runner
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
